# contract-review-rag

./: README.md  config.py  data_loader.py  evaluator.py  knowledge_base_builder.py  main.py  pyproject.toml  rag.py  rag_components.py  risk_assessor.py
data/: GT_contract_risk.csv  checklist.csv  clause_review_pair.csv  contract.csv
docs/: slides.pptx
