[project]
name = "contract-review"
version = "0.1.0"
description = "RAG enhanced LLM for contract review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.23.4",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "numpy>=2.2.6",
    "panda>=0.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
]
